--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
-  <article
+  <article>
     <header>
       <h1>Super Epic Tile Layer</h1>
       <strong>$35</strong>
@@ -23,7 +23,9 @@
       <dt>Length:</dt>
       <dd>45 min</dd>
     </dl>
-    <h2>Average Rating <meter value="4" min="0" max="5">4/5</meter></h2>
+    <h2>Average Rating
+      <meter value="4" min="0" max="5">4/5</meter>
+    </h2>
     <a href="#">[Add to Wishlist!]</a>
     <a href="#">[Add to Cart]</a>
     <p>You’re an ancient Egyptian God competing against the other gods to create the perfect landscape for your subjugated peoples. You and the gods adjust the landscape to best suit your people, building farms, rivers, cities, villages—and places of worship. The god with the best—most loved—landscape wins and claims the whole land.</p>
